# NIFTY_MLP_predictor

./: README.md  main.py  pyproject.toml  tune_hidden_layers.py  working.md
data/: NIFTY_OIL_&_GAS.csv
data/yahoo_cache/: RELIANCE.NS_10y_1d.csv  RELIANCE.NS_10y_1d.json  RELIANCE.NS_1mo_1d.csv  RELIANCE.NS_1mo_1d.json  RELIANCE.NS_1mo_1h.csv  RELIANCE.NS_1mo_1h.json  RELIANCE.NS_2y_1h.csv  RELIANCE.NS_2y_1h.json
