[project]
name = "dnn-trading-project"
version = "0.1.0"
description = "Demo of hidden-layer calculations on NIFTY bhavcopy data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"matplotlib>=3.8.0",
	"numpy>=2.0.0",
	"pandas>=2.2.0",
	"python-pptx>=1.0.2",
	"scikit-learn>=1.5.0",
	"yfinance>=0.2.54",
]
